pod/sidecar-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecar
  labels:
    app: sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidecar
  template:
    metadata:
      labels:
        app: sidecar
    spec:
      containers:
      - name: mainapp
        image: nsubrahm/mainapp:0.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
            protocol: TCP
      - name: localize
        image: nsubrahm/localize:0.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3001
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sidecar
spec:
  type: ClusterIP
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: sidecar
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sidecar
spec:
  to:
    kind: Service
    name: sidecar
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
